-. scala-pickling 추가. (scala 용 serialize/deserialze 는 이 것이 최고)

--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -14,6 +14,11 @@
     <name>core</name>
 
     <dependencies>
+        <!-- scala pickling -->
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-pickling_2.11</artifactId>
+        </dependency>
 
         <!-- Scalactic -->
         <dependency>
