--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
                 <artifactId>scala-reflect</artifactId>
                 <version>${scala.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-pickling_2.11</artifactId>
+                <version>0.9.0-SNAPSHOT</version>
+            </dependency>
+
 
             <!-- Akka -->
             <dependency>
