-.  debop4s-data-common, debop4s-data-slick 추가 (debop4s-slick 은 폐기)

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>debop4s-jdbc</module>
         <module>debop4s-rediscala</module>
         <module>debop4s-slick</module>
+        <module>debop4s-data-slick</module>
+        <module>debop4s-data-common</module>
     </modules>
 
     <properties>
