--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>0.4.0-SNAPSHOT</version>
 
     <modules>
+        <module>debop4s-config</module>
         <module>debop4s-core</module>
         <module>debop4s-timeperiod</module>
         <module>hibernate-rediscala</module>
@@ -24,6 +25,7 @@
         <module>debop4s-slick</module>
         <module>debop4s-testing</module>
         <module>debop4s-rediscala</module>
+
     </modules>
 
     <properties>
@@ -31,6 +33,7 @@
         <scala.version>2.11.6</scala.version>
         <akka.version>2.3.4</akka.version>
         <scalatra.version>2.3.0</scalatra.version>
+        <slick.version>2.1.0</slick.version>
 
         <springframework.version>4.1.5.RELEASE</springframework.version>
         <hibernate.version>4.3.7.Final</hibernate.version>
@@ -91,7 +94,18 @@
             <dependency>
                 <groupId>com.typesafe.slick</groupId>
                 <artifactId>slick_2.11</artifactId>
-                <version>2.1.0-M2</version>
+                <version>${slick.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.typesafe.slick</groupId>
+                <artifactId>slick-codegen_2.11</artifactId>
+                <version>${slick.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.typesafe.slick</groupId>
+                <artifactId>slick-testkit_2.11</artifactId>
+                <version>${slick.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <!-- Typesafe config -->
@@ -487,11 +501,6 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>${slf4j.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-nop</artifactId>
                 <version>${slf4j.version}</version>
             </dependency>
             <dependency>
@@ -969,10 +978,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-nop</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
