--- a/debop4s-data-slick/pom.xml
+++ b/debop4s-data-slick/pom.xml
@@ -15,7 +15,17 @@
         <!-- debop4s -->
         <dependency>
             <groupId>com.github.debop4s</groupId>
+            <artifactId>debop4s-config</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.debop4s</groupId>
             <artifactId>debop4s-core</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.debop4s</groupId>
+            <artifactId>debop4s-data-common</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 
@@ -25,20 +35,6 @@
             <artifactId>slick_2.11</artifactId>
         </dependency>
 
-        <!-- Typesafe config -->
-        <dependency>
-            <groupId>com.typesafe</groupId>
-            <artifactId>config</artifactId>
-            <version>1.2.1</version>
-        </dependency>
-
-        <!-- Hikari CP -->
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <scope>test</scope>
-        </dependency>
-
         <!-- Database Drivers -->
         <dependency>
             <groupId>com.h2database</groupId>
@@ -46,8 +42,23 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
