--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,12 @@
         <springframework.version>4.1.5.RELEASE</springframework.version>
         <hibernate.version>4.3.7.Final</hibernate.version>
 
-        <hibernate.validator.version>5.1.1.Final</hibernate.validator.version>
-        <querydsl.version>3.4.1</querydsl.version>
+        <hibernate.validator.version>5.1.3.Final</hibernate.validator.version>
+        <querydsl.version>3.6.0</querydsl.version>
 
-        <jackson.version>2.4.1</jackson.version>
+        <jackson.version>2.4.4</jackson.version>
         <json4s.version>3.2.10</json4s.version>
-        <jodd.version>3.5.2</jodd.version>
+        <jodd.version>3.6.1</jodd.version>
         <slf4j.version>1.7.7</slf4j.version>
 
         <tomcat.version>8.0.8</tomcat.version>
@@ -152,17 +152,7 @@
             </dependency>
             <dependency>
                 <groupId>org.scalatra</groupId>
-                <artifactId>scalatra-fileupload_2.11</artifactId>
-                <version>${scalatra.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.scalatra</groupId>
                 <artifactId>scalatra-jetty_2.11</artifactId>
-                <version>${scalatra.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.scalatra</groupId>
-                <artifactId>scalatra-commands_2.11</artifactId>
                 <version>${scalatra.version}</version>
             </dependency>
             <dependency>
@@ -466,27 +456,12 @@
             </dependency>
             <dependency>
                 <groupId>org.jodd</groupId>
-                <artifactId>jodd-db</artifactId>
-                <version>${jodd.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jodd</groupId>
                 <artifactId>jodd-bean</artifactId>
                 <version>${jodd.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.jodd</groupId>
                 <artifactId>jodd-props</artifactId>
-                <version>${jodd.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jodd</groupId>
-                <artifactId>jodd-jtx</artifactId>
-                <version>${jodd.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jodd</groupId>
-                <artifactId>jodd-servlet</artifactId>
                 <version>${jodd.version}</version>
             </dependency>
 
@@ -550,22 +525,12 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
-                <artifactId>spring-context-support</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
                 <artifactId>spring-expression</artifactId>
                 <version>${springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
-                <version>${springframework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-aspects</artifactId>
                 <version>${springframework.version}</version>
             </dependency>
             <dependency>
@@ -1079,22 +1044,46 @@
                     </testAnalysisCacheFile>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <args>
+                        <!-- NOTE: akka 사용 시에는 적용하면 안됩니다!!! -->
+                        <!--<arg>-optimise</arg>-->
+                        <arg>-Yconst-opt</arg>
+                        <arg>-Ydead-code</arg>
+                        <arg>-Yclosure-elim</arg>
+                        <arg>-Yinline</arg>
                         <arg>-target:jvm-${jdk.version}</arg>
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
-                        <!--<arg>-explaintypes</arg>-->
+                        <arg>-explaintypes</arg>
+                        <arg>-Dfile.encoding=UTF-8</arg>
+                        <arg>-nowarn</arg>
                     </args>
                     <javacArgs>
                         <javacArg>-source</javacArg>
                         <javacArg>${jdk.version}</javacArg>
                         <javacArg>-target</javacArg>
                         <javacArg>${jdk.version}</javacArg>
+                        <javacArg>-Dfile.encoding=UTF-8</javacArg>
                     </javacArgs>
                     <jvmArgs>
-                        <jvmArg>-Xms512M</jvmArg>
-                        <jvmArg>-Xmx2G</jvmArg>
+                        <jvmArg>-Xms128M</jvmArg>
+                        <jvmArg>-Xmx1G</jvmArg>
+                        <jvmArg>-XX:+UseCompressedOops</jvmArg>
+                        <jvmArg>-XX:+UseParallelOldGC</jvmArg>
                         <jvmArg>-Dfile.encoding=UTF-8</jvmArg>
                     </jvmArgs>
+
+                    <compilerPlugins>
+                        <!--
+                            NOTE: hconnect-data-slick 의 SlickSchema 에서 예외가 발생하여 제거함.
+                            NOTE: 플러그인을 정의하면 컴파일 시 @miniboxed를 자동으로 붙여주는데, 원치않는 곳에 붇을 수 있어 수동작업을 추천한다.
+                        -->
+                        <!--<compilerPlugin>-->
+                        <!--<groupId>org.scala-miniboxing.plugins</groupId>-->
+                        <!--<artifactId>miniboxing-plugin_2.11</artifactId>-->
+                        <!--<version>0.4-SNAPSHOT</version>-->
+                        <!--</compilerPlugin>-->
+                    </compilerPlugins>
+
                 </configuration>
                 <executions>
                     <execution>
@@ -1113,24 +1102,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <source>${jdk.version}</source>
-                    <target>${jdk.version}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
             </plugin>
 
             <plugin>
@@ -1163,10 +1134,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.15</version>
+                <version>2.17</version>
                 <configuration>
                     <skipTests>true</skipTests>
-                    <argLine>-Xmx2G</argLine>
+                    <argLine>-Xmx8G</argLine>
                     <argLine>-XX:+UseCompressedOops</argLine>
                     <argLine>-XX:+UseParallelOldGC</argLine>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
@@ -1186,7 +1157,7 @@
                 <configuration>
                     <argLine>-ea</argLine>
                     <argLine>-server</argLine>
-                    <argLine>-Xmx2G</argLine>
+                    <argLine>-Xmx8G</argLine>
                     <argLine>-XX:+UseCompressedOops</argLine>
                     <argLine>-XX:+UseParallelOldGC</argLine>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
