-. Slick 환경설정 테스트 완료.

--- a/debop4s-data-slick/src/test/resources/slick-mariadb-master-slaves.conf
+++ b/debop4s-data-slick/src/test/resources/slick-mariadb-master-slaves.conf
@@ -39,5 +39,21 @@ slick {
 
       maxPoolSize = 64
     }
+    {
+      driverClass = ${slick.database.driverClass}
+      url = "jdbc:mariadb://127.0.0.1:3306/"${slick.database.name}
+      username = ${slick.database.username}
+      password = ${slick.database.password}
+
+      maxPoolSize = 64
+    }
+    {
+      driverClass = ${slick.database.driverClass}
+      url = "jdbc:mariadb://127.0.0.1:3306/"${slick.database.name}
+      username = ${slick.database.username}
+      password = ${slick.database.password}
+
+      maxPoolSize = 64
+    }
   ]
 }
