--- a/debop4s-data-slick/src/test/resources/slick-h2.conf
+++ b/debop4s-data-slick/src/test/resources/slick-h2.conf
@@ -8,6 +8,9 @@ slick {
     url = "jdbc:h2:mem:"${slick.database.name}
     username = "sa"
     password = ""
+
+    maxPoolSize = 64
+    minIdleSize = 4
   }
 
 }
