--- a/debop4s-data-slick/src/test/resources/slick-mariadb-master-slaves.conf
+++ b/debop4s-data-slick/src/test/resources/slick-mariadb-master-slaves.conf
@@ -14,6 +14,7 @@ slick {
     password = "root"
 
     maxPoolSize = 64
+    minIdleSize = 4
   }
 
   # Master DB 하나만 쓰는 경우에는 굳이 masters 에 또 정의할 필요는 없습니다.
@@ -26,6 +27,7 @@ slick {
       password = ${slick.database.password}
 
       maxPoolSize = 64
+      minIdleSize = 4
     }
   ]
 
@@ -38,6 +40,7 @@ slick {
       password = ${slick.database.password}
 
       maxPoolSize = 64
+      minIdleSize = 4
     }
     {
       driverClass = ${slick.database.driverClass}
@@ -46,6 +49,7 @@ slick {
       password = ${slick.database.password}
 
       maxPoolSize = 64
+      minIdleSize = 4
     }
     {
       driverClass = ${slick.database.driverClass}
@@ -54,6 +58,7 @@ slick {
       password = ${slick.database.password}
 
       maxPoolSize = 64
+      minIdleSize = 4
     }
   ]
 }
