-. debop4s-data-slick3 (slick 3.0 버전을 사용하는 모듈) -. hikaricp 버전 upgrade

--- a/debop4s-data-common/pom.xml
+++ b/debop4s-data-common/pom.xml
@@ -23,7 +23,7 @@
         <!-- Hikari CP -->
         <dependency>
             <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
+            <artifactId>HikariCP-java6</artifactId>
         </dependency>
 
         <!-- Bone CP -->
