--- a/debop4s-data/pom.xml
+++ b/debop4s-data/pom.xml
@@ -105,7 +105,7 @@
         <!-- Hikari CP -->
         <dependency>
             <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
+            <artifactId>HikariCP-java6</artifactId>
         </dependency>
 
         <!-- Database Drivers -->
