--- a/debop4s-redis/pom.xml
+++ b/debop4s-redis/pom.xml
@@ -99,7 +99,7 @@
         <!-- Hikari CP -->
         <dependency>
             <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
+            <artifactId>HikariCP-java6</artifactId>
             <scope>test</scope>
         </dependency>
 
