--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,14 @@
         <module>debop4s-data</module>
         <module>debop4s-testing</module>
         <module>debop4s-rediscala</module>
+        <module>debop4s-data-slick3</module>
 
     </modules>
 
     <properties>
         <jdk.version>1.7</jdk.version>
         <scala.version>2.11.6</scala.version>
+        <scala.main.version>2.11</scala.main.version>
         <akka.version>2.3.4</akka.version>
         <scalatra.version>2.3.0</scalatra.version>
         <slick.version>2.1.0</slick.version>
@@ -746,8 +748,8 @@
             <!-- Hikari CP -->
             <dependency>
                 <groupId>com.zaxxer</groupId>
-                <artifactId>HikariCP</artifactId>
-                <version>1.4.0</version>
+                <artifactId>HikariCP-java6</artifactId>
+                <version>2.3.3</version>
             </dependency>
 
             <!-- Database Drivers -->
