-. Slick 3.0 비동기 실행을 위한 extensions 추가.

--- a/debop4s-data-slick3/pom.xml
+++ b/debop4s-data-slick3/pom.xml
@@ -17,6 +17,12 @@
     </properties>
 
     <dependencies>
+        <!-- Scala Async -->
+        <dependency>
+            <groupId>org.scala-lang.modules</groupId>
+            <artifactId>scala-async_2.11</artifactId>
+        </dependency>
+
         <!-- Slick -->
         <dependency>
             <groupId>com.typesafe.slick</groupId>
