--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>debop4s-data</module>
         <module>debop4s-testing</module>
         <module>debop4s-rediscala</module>
+        <module>debop4s-benchmark</module>
     </modules>
 
     <properties>
@@ -574,20 +575,20 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-jpa</artifactId>
-                <version>1.6.1.RELEASE</version>
+                <version>1.8.0.RELEASE</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-mongodb</artifactId>
-                <version>1.5.1.RELEASE</version>
+                <version>1.7.0.RELEASE</version>
             </dependency>
 
             <!-- Spring Security -->
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-crypto</artifactId>
-                <version>3.2.4.RELEASE</version>
+                <version>4.0.0.RELEASE</version>
             </dependency>
 
             <!-- AspectJ -->
