--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,26 @@
         <module>debop4s-config</module>
         <module>debop4s-core</module>
         <module>debop4s-timeperiod</module>
+
+        <module>debop4s-mongo</module>
+
         <module>hibernate-rediscala</module>
         <module>debop4s-redis</module>
-        <module>debop4s-mongo</module>
+        <module>debop4s-rediscala</module>
+
         <module>debop4s-data-common</module>
         <module>debop4s-data-jpa</module>
         <module>debop4s-data-slick</module>
         <module>debop4s-data-slick3</module>
         <module>debop4s-data</module>
-        <module>debop4s-testing</module>
-        <module>debop4s-rediscala</module>
+
+        <module>debop4s-shiro</module>
+        <module>debop4s-web-spring</module>
+        <module>debop4s-web-scalatra</module>
+
         <module>debop4s-benchmark</module>
+
+
     </modules>
 
     <properties>
