-. minor changes. -. scala shapeless library 추가.

--- a/debop4s-data-slick3/pom.xml
+++ b/debop4s-data-slick3/pom.xml
@@ -41,6 +41,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Shapeless -->
+        <dependency>
+            <groupId>com.chuusai</groupId>
+            <artifactId>shapeless_${scala.main.version}</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
         <!-- debop4s -->
         <dependency>
             <groupId>com.github.debop4s</groupId>
