-. Future 용 extension methods 를 debop4s.core.concurrent 에서만 제공 (debop4s.core 의 package object 에서는 제외)

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,13 @@
                 <version>2.1.0</version>
             </dependency>
 
+            <!-- ReactiveX RxScala -->
+            <dependency>
+                <groupId>io.reactivex</groupId>
+                <artifactId>rxscala_${scala.main.version}</artifactId>
+                <version>0.24.1</version>
+            </dependency>
+
             <!-- Scalatra -->
             <dependency>
                 <groupId>org.scalatra</groupId>
