-. Slick 사용 시 같은 모듈에서 다른 RDBMS 를 설정하는 것은 불가능하다. (예: 한 클래스는 H2, 한 클래스는 MySQL)     => Northwind 예제를 debop4s-data-slick-northwind 로 분리했다. slick 3.0 도 앞으로 분리해서 테스트해야 한다.

--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,12 @@
         <module>debop4s-rediscala</module>
 
         <module>debop4s-data-common</module>
+
         <module>debop4s-data-slick</module>
+        <module>debop4s-data-slick-northwind</module>
+
         <module>debop4s-data-slick3</module>
+
         <module>debop4s-data-orm</module>
 
         <module>debop4s-shiro</module>
@@ -30,6 +34,7 @@
         <module>debop4s-web-scalatra</module>
 
         <module>debop4s-benchmark</module>
+
     </modules>
 
     <properties>
