-. debop4s.core.concurrent._ : 결과값을 받지 않는 경우에는 await 대신 stay 를 사용해야 한다. -. slick 3 의 DBIO 작업을 하기 위해 commit, autoCommit, readonly 메소드를 SlickComponent에 정의 -. slick 3 용 테스트 코드를 위의 commit, autoCommit, readonly 로 수정 -. TODO: 현재로서 slick 3 용 테스트 코드에서 DB 사용 시 pool 이 계속 차는 현상이 있다. 이부분은 db를 새로 생성해서 생기는 문제인것 같다.

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>debop4s-web-scalatra</module>
 
         <module>debop4s-benchmark</module>
+        <module>debop4s-data-slick3-northwind</module>
 
     </modules>
 
