--- a/debop4s-data-slick3-northwind/pom.xml
+++ b/debop4s-data-slick3-northwind/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>debop4s-data-slick3-northwind</artifactId>
     <name>data-slick3-northwind</name>
 
+    <properties>
+        <slick3.version>3.0.0-RC3</slick3.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.github.debop4s</groupId>
@@ -23,8 +27,26 @@
             <groupId>com.github.debop4s</groupId>
             <artifactId>debop4s-timeperiod</artifactId>
             <version>${project.parent.version}</version>
+        </dependency>
+
+        <!-- Slick -->
+        <dependency>
+            <groupId>com.typesafe.slick</groupId>
+            <artifactId>slick_${scala.main.version}</artifactId>
+            <version>${slick3.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.slick</groupId>
+            <artifactId>slick-codegen_${scala.main.version}</artifactId>
+            <version>${slick3.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.slick</groupId>
+            <artifactId>slick-testkit_${scala.main.version}</artifactId>
+            <version>${slick3.version}</version>
             <scope>test</scope>
         </dependency>
+
         <!-- Database Drivers -->
         <dependency>
             <groupId>com.h2database</groupId>
