--- a/pom.xml
+++ b/pom.xml
@@ -723,32 +723,6 @@
                 <version>${querydsl.version}</version>
             </dependency>
 
-            <!-- MyBatis -->
-            <dependency>
-                <groupId>org.mybatis</groupId>
-                <artifactId>mybatis</artifactId>
-                <version>3.2.8</version>
-            </dependency>
-
-            <!-- scalikejdbc -->
-            <dependency>
-                <groupId>org.scalikejdbc</groupId>
-                <artifactId>scalikejdbc_2.11</artifactId>
-                <version>2.0.4</version>
-            </dependency>
-            <dependency>
-                <groupId>org.scalikejdbc</groupId>
-                <artifactId>scalikejdbc-config_2.11</artifactId>
-                <version>2.0.4</version>
-            </dependency>
-            <dependency>
-                <groupId>org.scalikejdbc</groupId>
-                <artifactId>scalikejdbc-test_2.11</artifactId>
-                <version>2.0.4</version>
-                <scope>test</scope>
-            </dependency>
-
-
             <!-- MongoDB -->
             <dependency>
                 <groupId>org.mongodb</groupId>
@@ -938,15 +912,22 @@
             <!-- ScalaTest -->
             <dependency>
                 <groupId>org.scalatest</groupId>
-                <artifactId>scalatest_2.11</artifactId>
+                <artifactId>scalatest_${scala.main.version}</artifactId>
                 <version>2.2.4</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.storm-enroute</groupId>
-                <artifactId>scalameter_2.11</artifactId>
+                <artifactId>scalameter_${scala.main.version}</artifactId>
                 <version>0.6</version>
                 <scope>test</scope>
+            </dependency>
+
+            <!-- ScalaCheck -->
+            <dependency>
+                <groupId>org.scalacheck</groupId>
+                <artifactId>scalacheck_${scala.main.version}</artifactId>
+                <version>1.12.2</version>
             </dependency>
 
         </dependencies>
@@ -971,18 +952,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
-        </dependency>
-
-        <!-- ScalaTest -->
-        <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.11</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.storm-enroute</groupId>
-            <artifactId>scalameter_2.11</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <!-- Logging -->
@@ -1015,6 +984,25 @@
             <artifactId>mockito-all</artifactId>
             <version>1.9.5</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- ScalaTest -->
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.11</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.storm-enroute</groupId>
+            <artifactId>scalameter_2.11</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- ScalaCheck -->
+        <dependency>
+            <groupId>org.scalacheck</groupId>
+            <artifactId>scalacheck_${scala.main.version}</artifactId>
+            <version>1.12.2</version>
         </dependency>
 
         <!-- Spring Test -->
