--- a/debop4s-rediscala/src/test/resources/config/local.conf
+++ b/debop4s-rediscala/src/test/resources/config/local.conf
@@ -1,11 +1,13 @@
 healthon {
 
+  # TODO: database 값을 변경했을 때에도 제대로 테스트가 되도록 수정해야 한다. (RedisHelper 등)
+
   # Redis 서버에 Slaves 가 없다면, slaves=[] 로 정의해 주세요.
   redis {
     master {
       host = "127.0.0.1"
       port = 6379
-      database = 15
+      database = 0
     }
 
     # Slaves 를 같은 것을 여러 개 정의하면 Actor를 여러개 만드는 것과 같아서, 속도 증가가 가능하다.
@@ -13,12 +15,12 @@ healthon {
       {
         host = "127.0.0.1"
         port = 6379
-        database = 15
+        database = 0
       },
       {
         host = "127.0.0.1"
         port = 6379
-        database = 15
+        database = 0
       }
     ]
 
