-. 환경설정 값 수정 (예전 회사 DB라 ...)

--- a/debop4s-data-orm/src/test/resources/config/devel.conf
+++ b/debop4s-data-orm/src/test/resources/config/devel.conf
@@ -1,9 +1,9 @@
 include "local.conf"
 
-healthon {
+debop4s {
 
   database {
-    host = "123.212.160.106"
-    name = "HConnect_staging"
+    //    host = "123.212.160.106"
+    //    name = "HConnect_staging"
   }
 }
