--- a/debop4s-data-orm/src/test/resources/config/local.conf
+++ b/debop4s-data-orm/src/test/resources/config/local.conf
@@ -1,13 +1,17 @@
-healthon {
+debop4s {
 
   database {
     host = "127.0.0.1,127.0.0.1"
     name = "hibernate"
 
-    driverClass = "com.mysql.jdbc.Driver"
-    url = "jdbc:mysql:replication://"${healthon.database.host}"/"${healthon.database.name}"?useUnicode=true&characterEncoding=UTF-8"
-    username = "root"
-    password = "root"
+    //    driverClass = "com.mysql.jdbc.Driver"
+    //    url = "jdbc:mysql:replication://"${healthon.database.host}"/"${healthon.database.name}"?useUnicode=true&characterEncoding=UTF-8"
+    //    username = "root"
+    //    password = "root"
+    driverClass = "org.h2.jdbcx.JdbcDataSource"
+    url = "jdbc:h2:mem:test;MVCC=true"
+    username = "sa"
+    password = ""
 
     maxPoolSize = 32
     minIdleSize = 2
