--- a/debop4s-data-orm/src/test/resources/config/prod.conf
+++ b/debop4s-data-orm/src/test/resources/config/prod.conf
@@ -1,11 +1,11 @@
-healthon {
+debop4s {
 
   database {
-    host = "110.93.135.105:3306,110.93.135.106"
-    name = "healthconnect_production"
+    //    host = "110.93.135.105:3306,110.93.135.106"
+    //    name = "healthconnect_production"
 
-    username = "healthconnect"
-    password = "rhrlwntpdy"
+    //    username = "healthconnect"
+    //    password = "rhrlwntpdy"
   }
 
   hibernate {
