--- a/debop4s-data-orm/src/test/resources/config/test.conf
+++ b/debop4s-data-orm/src/test/resources/config/test.conf
@@ -1,9 +1,9 @@
 include "local.conf"
 
-healthon {
+debop4s {
 
   database {
-    host = "123.212.160.106"
-    name = "HConnect_staging"
+    //    host = "123.212.160.106"
+    //    name = "HConnect_staging"
   }
 }
